# UQAC_8INF870_Set_cover_problem

./: .gitignore  .gitmodules  README.md
documents/figures/: representation_to_bitsets.tex  solution_validity_check_function.tex
documents/plots/: bnb_time.data  exhaustive_bnb_time_lin.tex  exhaustive_bnb_time_log.tex  greedy_diff.tex  permutations_generators_ram.tex  permutations_generators_time_lin.tex  permutations_generators_time_log.tex
documents/plots/data/: wgreedy_diff.data
documents/presentation/: beamerfontthemefocus.sty  main.tex
documents/report/: main.tex  packages.tex  settings.tex
documents/report/figures/: figures_common.tex  g1_permutations.tex
documents/report/plots/: exhaustive_bnb_time_log.tex  greedy_diff.tex  permutations_generators_ram.tex  permutations_generators_time_lin.tex
documents/report/tables/: generated_scp_problems_optimal_solutions_1.tex
documents/tables/: generated_scp_problems_optimal_solutions_4_1.tex  generated_scp_problems_optimal_solutions_4_2.tex  generated_scp_problems_optimal_solutions_4_3.tex  generated_scp_problems_optimal_solutions_4_4.tex  orlibrary_scp_problems_optimal_solutions_1.tex  orlibrary_scp_problems_optimal_solutions_2.tex  tables_common.tex
nomad/: nomad  optimize.sh  optimize_annealing.sh  optimize_genetic.sh  param_annealing.txt  param_genetic.txt
rapport_final/: packages.tex  references.bib  set_cover_problem.tex  settings.tex
rapport_final/figures/: bnb.tex  representation_to_bitsets.tex  solution_validity_check_function.tex
rapport_final/plots/: exhaustive_bnb_time_lin.tex  exhaustive_bnb_time_log.tex  exhaustive_time.data  g1_ram.data  g1_time.data  g2_ram.data  g2_time.data  g3_ram.data  greedy_diff.tex  permutations_generators_ram.tex  permutations_generators_time_lin.tex  permutations_generators_time_log.tex  ugreedy_diff.data
rapport_final/tables/: generated_scp_problems_optimal_solutions_2.tex  generated_scp_problems_optimal_solutions_3.tex  generated_scp_problems_optimal_solutions_full.tex  genetic_parameters.tex  orlibrary_scp_approached.tex  orlibrary_scp_problem_sets.tex  simulated_annealing_parameters.tex
rapport_intermediaire/: packages.tex  references.bbl  references.bib  set_cover_problem.tex  settings.tex
solver/: CMakeLists.txt  LICENSE
solver/cmake/: dynamic_bitset.cmake  spdlog.cmake
solver/include/: Problem.hpp  Solution.hpp  benchmark.hpp  bnb.hpp  ckeck.hpp  crossover.hpp  descent.hpp  exhaustive.hpp  genetic.hpp  greedy.hpp  logger.hpp  neighbouring.hpp  nomad.hpp  ostream_config_guard.hpp  permutations.hpp
solver/resources/benchmark/: benchmarck_problem_10.txt  benchmarck_problem_100.txt  benchmarck_problem_11.txt  benchmarck_problem_12.txt  benchmarck_problem_13.txt  benchmarck_problem_14.txt  benchmarck_problem_15.txt  benchmarck_problem_16.txt  benchmarck_problem_17.txt  benchmarck_problem_18.txt  benchmarck_problem_19.txt  benchmarck_problem_2.txt  benchmarck_problem_20.txt  benchmarck_problem_21.txt  benchmarck_problem_22.txt  benchmarck_problem_23.txt  benchmarck_problem_24.txt  benchmarck_problem_25.txt  benchmarck_problem_26.txt  benchmarck_problem_27.txt  benchmarck_problem_28.txt  benchmarck_problem_29.txt  benchmarck_problem_3.txt  benchmarck_problem_30.txt  benchmarck_problem_31.txt  benchmarck_problem_32.txt  benchmarck_problem_33.txt  benchmarck_problem_34.txt  benchmarck_problem_35.txt  benchmarck_problem_36.txt  benchmarck_problem_37.txt  benchmarck_problem_38.txt  benchmarck_problem_39.txt  benchmarck_problem_4.txt  benchmarck_problem_40.txt  benchmarck_problem_41.txt  benchmarck_problem_42.txt  benchmarck_problem_43.txt  benchmarck_problem_44.txt  benchmarck_problem_45.txt  (+59 more)
solver/src/: Problem.cpp  Solution.cpp  benchmark.cpp  bnb.cpp  ckeck.cpp  crossover.cpp  descent.cpp  exhaustive.cpp  genetic.cpp  greedy.cpp  logger.cpp  main.cpp  neighbouring.cpp  nomad.cpp  permutations.cpp
